<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFFFF">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="211dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/stay_home_nsave_lives"
        android:textColor="#3949AB"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="141dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/help_stop_coronavirus"
        android:textColor="#3949AB"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="390dp"
        android:layout_height="284dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="-10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/_1_stay_home_as_much_as_you_can_n2_keep_a_safe_distance_n3_wash_hands_often_n4_cover_your_cough_n5_sick_call_ahead"
        android:textColor="#1E88E5"
        android:textSize="24sp" />

    <Button
        android:id="@+id/homePrevention"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="26dp"
        android:background="#1E88E5"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/back_to_home"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="86dp"
        android:contentDescription="@string/socialdis"
        app:srcCompat="@drawable/social_distancing_man_and_woman_wearing_masks" />

</RelativeLayout>