<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFEFF"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/reportButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginBottom="36dp"
        android:background="#039BE5"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/get_report"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/symptopmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/symptopmButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginBottom="36dp"
        android:background="#039BE5"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/symptoms"
        android:textColor="#F6F7FA"
        android:textColorHighlight="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/preventionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/preventionButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginBottom="56dp"
        android:background="#039BE5"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/prevention"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/coronavirus_disease"
        android:textColor="#3949AB"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="278dp"
        android:layout_height="196dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/covid"
        app:layout_constraintBottom_toTopOf="@+id/reportButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
