<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".report" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/report"
        android:textColor="#3949AB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapReport"
        android:layout_width="366dp"
        android:layout_height="190dp"
        android:layout_marginTop="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/homeReport"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:background="#1E88E5"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/back_to_main1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapReport"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/textViewCases"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintBottom_toTopOf="@+id/mapReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCases"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/textView115"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/cases"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewCases"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textViewLocation12"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/location"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mapReport"
        app:layout_constraintEnd_toStartOf="@+id/textViewLocation"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView115"
        app:layout_constraintVertical_bias="0.187" />

</androidx.constraintlayout.widget.ConstraintLayout>